# snowflake

./: .gitignore  Cargo.toml  README.md
src/: gravner_griffeath.rs  gravner_griffeath_wasm.rs  main.rs  reiter.rs  simulation.rs  stl.rs  utils.rs  visualization.rs
