[package]
name = "snowflake-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_egui = "0.29.0"
chrono = "0.4.38"
csv = "1.3.0"
fnv = "1.0.7"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-rand = "0.15.0"
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
stl_io = "0.8.2"
tracing = "0.1.40"
